# herald

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
app/: Info.plist  build.sh  main.swift
docs/: CONTRACT.md  SINKS.md
docs/examples/: opencode-plugin.md
src/: cli.rs  config.rs  context.rs  event.rs  lib.rs  logbook.rs  main.rs  routing.rs
src/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs
src/commands/: dispatch.rs  doctor.rs  emit.rs  hook.rs  log_cmd.rs  mod.rs  test_cmd.rs
src/platform/: linux.rs  macos.rs  mod.rs  other.rs
src/sinks/: cmux.rs  exec.rs  herdr.rs  mod.rs  osc.rs  system.rs
tests/: cli.rs
tests/fixtures/: claude_notification.json  claude_session_start.json  claude_stop.json  claude_subagent_stop.json  codex_turn_complete.json
